<resources>
    <string name="app_name">RyanstDemo</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>

    <string name="mainMenu0">发现</string>
    <string name="mainMenu1">收藏</string>
    <string name="mainMenu2">列表</string>
    <string name="mainMenu3">我</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="test_space">测试 测试 测试 测试 test test test test test</string>

    <string name="html_string"><b><u>bold, underline </u></b></string>
</resources>
